@@ -22,6 +22,7 @@
 
 #include <WebKit2/qgraphicswkview.h>
 #include <WebKit2/qwkcontext.h>
+#include <WebKit2/qwkhistory.h>
 #include <WebKit2/qwkpage.h>
 #include <WebKit2/qwkpreferences.h>
 
